fix button text on ios

--- a/theDamnGame/components/TheDamnGameContainer.scss
+++ b/theDamnGame/components/TheDamnGameContainer.scss
@@ -28,6 +28,7 @@
     display: flex;
     flex-flow: row wrap;
     align-content: center;
+    align-items: center;
     justify-content: center;
 
     transition: transform 300ms $easeOut;
